--- a/index.html
+++ b/index.html
@@ -76,23 +76,17 @@
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="#">
-                  <h1>Title 1</h1>
-                </a>
+                <a href="areaguide.html" title="">Area Guide</a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="#">
-                  <h1>Title 2</h1>        
-                </a>
+                <a href="importantstuff.html" title="">The Important Stuff</a>     
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="#">
-                  <h1> Title 3</h1>
-                </a>
+                <a href="contactus.html" title="">Contact Us</a>
               </div>
             </div>
           </div>
