Made buttons transparent but still spacing probs

--- a/index.html
+++ b/index.html
@@ -35,29 +35,6 @@
         </div>
   </div>
 
-          <nav class="navbar navbar-default">
-                    <div style="margin-top: : 100px">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
-                  <span class="sr-only">Toggle Navigation</span>
-                  <i class="fa fa-bars"></i>
-                </button>
-                    </div>
-                <a href="index.html" class="navbar-brand">
-                </a>
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-navbar-collapse">
-                            <ul class="nav navbar-nav main-navbar-nav" style="padding-top: 20px">
-                                <li class="active"><a href="index.html" title="">HOME</a></li>
-                                <li><a href="areaguide.html" title="">AREA GUIDE</a></li>
-                                <li><a href="importantstuff.html" title="">THE IMPORTANT STUFF</a></li>
-                                <li><a href="contactus.html" title="">CONTACT US</a></li>
-                            </ul>                           
-                        </div><!-- /.navbar-collapse -->                
-                <!-- END MAIN NAVIGATION -->
-    </nav>
-  </header>
-
-
 <div class="container">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
@@ -76,17 +53,23 @@
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="areaguide.html" title="">Area Guide</a>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
+                </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="importantstuff.html" title="">The Important Stuff</a>     
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
+                </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="contactus.html" title="">Contact Us</a>
+                <a href="contactus.html">
+                  <h2> Contact Us </h2>
+                </a>
               </div>
             </div>
           </div>
@@ -101,22 +84,22 @@
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="#">
-                  <h1>Title</h1>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="#">
-                  <h1>Title</h1>        
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="#">
-                  <h1> Title </h1>
+                <a href="contactus.html">
+                  <h2> Contact Us </h2>
                 </a>
               </div>
             </div>
@@ -127,59 +110,54 @@
     </div>
 
 
-    <div class="item">
-      <img src="assets/images/pica60004000.jpg" alt="Living In London">
-      <div class="carousel-caption">
-        <h1 class="carousel-title">Living In London</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
-                 <div class="row">
-            <div class="col-sm-4">
-              <div class="btn bigbutton" id="bluebutton">
-                <a href="#">
-                  <h1>Title 1</h1>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="btn bigbutton" id="redbutton">
-                <a href="#">
-                  <h1>Title 2</h1>        
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="btn bigbutton" id="greenbutton">
-                <a href="#">
-                  <h1> Title 3 </h1>
-                </a>
-              </div>
-            </div>
-          </div>
-      </div>
-    </div>
-
-    <div class="item">
-      <img src="assets/images/newstpauls60004000.jpg" alt="Living In London">
-      <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="#">
-                  <h1>Title</h1>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="#">
-                  <h1>Title</h1>        
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="#">
-                  <h1> Title </h1>
+                <a href="contactus.html">
+                  <h2> Contact Us </h2>
+                </a>
+              </div>
+            </div>
+          </div>
+        <h1 class="carousel-title">Living In London</h1>
+        <p class="carousel-subtitle">The overall guide for moving to London</p>
+      </div>
+    </div>
+  </div>
+
+         <div class="row">
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="contactus.html">
+                  <h2> Contact Us </h2>
                 </a>
               </div>
             </div>
