Buttons looking better on main page

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
       </div>
     </div>
 
-      <div class="item">
-      <img src="assets/images/canary60004000.jpg" alt="Living In London">
+       <div class="item">
+      <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
@@ -104,12 +104,15 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
+        <h1 class="carousel-title">Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
 
 
+    <div class="item">
+      <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
+      <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
@@ -133,12 +136,14 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
+        <h1 class="carousel-title">Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
-  </div>
 
+    <div class="item">
+      <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
+      <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
@@ -162,11 +167,12 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
+        <h1 class="carousel-title">Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
   </div>
+
 
 
   <!-- Left and right controls -->
