--- a/contactus.html
+++ b/contactus.html
@@ -35,29 +35,6 @@
         </div>
   </div>
 
-          <nav class="navbar navbar-default">
-                    <div style="margin-top: : 100px">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse">
-                  <span class="sr-only">Toggle Navigation</span>
-                  <i class="fa fa-bars"></i>
-                </button>
-                    </div>
-                <a href="index.html" class="navbar-brand">
-                </a>
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-navbar-collapse">
-                            <ul class="nav navbar-nav main-navbar-nav" style="padding-top: 20px">
-                                <li class="active"><a href="index.html" title="">HOME</a></li>
-                                <li><a href="areaguide.html" title="">AREA GUIDE</a></li>
-                                <li><a href="importantstuff.html" title="">THE IMPORTANT STUFF</a></li>
-                                <li><a href="contactus.html" title="">CONTACT US</a></li>
-                            </ul>                           
-                        </div><!-- /.navbar-collapse -->                
-                <!-- END MAIN NAVIGATION -->
-    </nav>
-  </header>
-
-
 <div class="container">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
@@ -73,6 +50,28 @@
     <div class="item active">
       <img src="assets/images/bigben60004000.jpeg" alt="Contact Us">
       <div class="carousel-caption">
+         <div class="row">
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="index.html">
+                  <h2>Home</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>        
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff </h2>
+                </a>
+              </div>
+            </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
@@ -81,6 +80,28 @@
       <div class="item">
       <img src="assets/images/canary60004000.jpg" alt="Contact Us">
       <div class="carousel-caption">
+         <div class="row">
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="index.html">
+                  <h2>Home</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>        
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff </h2>
+                </a>
+              </div>
+            </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
@@ -90,6 +111,28 @@
     <div class="item">
       <img src="assets/images/pica60004000.jpg" alt="Contact Us">
       <div class="carousel-caption">
+         <div class="row">
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="index.html">
+                  <h2>Home</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>        
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff </h2>
+                </a>
+              </div>
+            </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
@@ -98,6 +141,28 @@
     <div class="item">
       <img src="assets/images/newstpauls60004000.jpg" alt="Contact Us">
       <div class="carousel-caption">
+         <div class="row">
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="bluebutton">
+                <a href="index.html">
+                  <h2>Home</h2>
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="redbutton">
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>        
+                </a>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              <div class="btn bigbutton" id="greenbutton">
+                <a href="importantstuff.html">
+                  <h2> Important Stuff </h2>
+                </a>
+              </div>
+            </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
