--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+        <h1 class="carousel-title">Living In London</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
@@ -136,7 +136,7 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+        <h1 class="carousel-title">Living In London</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
@@ -167,7 +167,7 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+        <h1 class="carousel-title">Living In London</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
