fixed some errors

--- a/areaguide.html
+++ b/areaguide.html
@@ -48,7 +48,7 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/bigben60004000.jpeg" alt="Area Guide">
+      <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
@@ -78,8 +78,8 @@
       </div>
     </div>
 
-      <div class="item">
-      <img src="assets/images/canary60004000.jpg" alt="Area Guide">
+       <div class="item">
+      <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
@@ -103,6 +103,7 @@
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Area Guide</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
@@ -110,7 +111,7 @@
 
 
     <div class="item">
-      <img src="assets/images/pica60004000.jpg" alt="Area Guide">
+      <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
@@ -134,13 +135,14 @@
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Area Guide</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
 
     <div class="item">
-      <img src="assets/images/newstpauls60004000.jpg" alt="Area Guide">
+      <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
@@ -164,11 +166,13 @@
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Area Guide</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
   </div>
+
 
 
   <!-- Left and right controls -->
