--- a/contactus.html
+++ b/contactus.html
@@ -48,60 +48,62 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/bigben60004000.jpeg" alt="Contact Us">
+      <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff </h2>
+                <a href="index.html">
+                  <h2> Home </h2>
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
 
-      <div class="item">
-      <img src="assets/images/canary60004000.jpg" alt="Contact Us">
+       <div class="item">
+      <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff </h2>
+                <a href="index.html">
+                  <h2> Home </h2>
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
@@ -109,65 +111,68 @@
 
 
     <div class="item">
-      <img src="assets/images/pica60004000.jpg" alt="Contact Us">
+      <img src="assets/images/pica60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff </h2>
+                <a href="index.html">
+                  <h2> Home </h2>
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
 
     <div class="item">
-      <img src="assets/images/newstpauls60004000.jpg" alt="Contact Us">
+      <img src="assets/images/newstpauls60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="importantstuff.html">
+                  <h2>The Important Stuff</h2>        
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="greenbutton">
-                <a href="importantstuff.html">
-                  <h2> Important Stuff </h2>
+                <a href="index.html">
+                  <h2> Home </h2>
                 </a>
               </div>
             </div>
+          </div>
         <h1 class="carousel-title">Contact Us</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
   </div>
+
 
 
   <!-- Left and right controls -->
@@ -181,7 +186,6 @@
   </a>
 </div>    
 </div>
-
 
 
 
