--- a/importantstuff.html
+++ b/importantstuff.html
@@ -17,27 +17,6 @@
 <body>
 
 <div class="container">
-       <header class="site-header">
-        <div class="top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <ul class="list-inline pull-right">
-                            <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="mailto:imohirsh@icloud.com"><i class="fa fa-envelope-o"></i></a></li>
-                            <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
-                            <li><a href="tel:+902222222222"><i class="fa fa-phone"></i>  011111 469869</a></li>
-                        </ul>                        
-                    </div>
-                </div>
-            </div>
-        </div>
-  </div>
-
-
-
-<div class="container">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
   <ol class="carousel-indicators">
@@ -50,20 +29,20 @@
 
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="assets/images/bigben60004000.jpeg" alt="Important Stuff">
+      <img src="assets/images/bigben60004000.jpeg" alt="Living In London">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="index.html">
+                  <h2>Home</h2>        
                 </a>
               </div>
             </div>
@@ -74,26 +53,27 @@
                 </a>
               </div>
             </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+          </div>
+        <h1 class="carousel-title">The Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
 
-      <div class="item">
+       <div class="item">
       <img src="assets/images/canary60004000.jpg" alt="Important Stuff">
       <div class="carousel-caption">
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="index.html">
+                  <h2>Home</h2>        
                 </a>
               </div>
             </div>
@@ -104,7 +84,8 @@
                 </a>
               </div>
             </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+          </div>
+        <h1 class="carousel-title">The Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
@@ -116,15 +97,15 @@
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="index.html">
+                  <h2>Home</h2>        
                 </a>
               </div>
             </div>
@@ -135,7 +116,8 @@
                 </a>
               </div>
             </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+          </div>
+        <h1 class="carousel-title">The Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
@@ -146,15 +128,15 @@
          <div class="row">
             <div class="col-sm-4">
               <div class="btn bigbutton" id="bluebutton">
-                <a href="index.html">
-                  <h2>Home</h2>
+                <a href="areaguide.html">
+                  <h2>Area Guide</h2>
                 </a>
               </div>
             </div>
             <div class="col-sm-4">
               <div class="btn bigbutton" id="redbutton">
-                <a href="areaguide.html">
-                  <h2>Area Guide</h2>        
+                <a href="index.html">
+                  <h2>Home</h2>        
                 </a>
               </div>
             </div>
@@ -165,11 +147,13 @@
                 </a>
               </div>
             </div>
-        <h1 class="carousel-title">Important Stuff</h1>
+          </div>
+        <h1 class="carousel-title">The Important Stuff</h1>
         <p class="carousel-subtitle">The overall guide for moving to London</p>
       </div>
     </div>
   </div>
+
 
 
   <!-- Left and right controls -->
