--- a/importantstuff.html
+++ b/importantstuff.html
@@ -17,6 +17,25 @@
 <body>
 
 <div class="container">
+       <header class="site-header">
+        <div class="top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <ul class="list-inline pull-right">
+                            <li><a href="https://twitter.com/"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="http://www.facebook.com/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="mailto:imohirsh@icloud.com"><i class="fa fa-envelope-o"></i></a></li>
+                            <li><a href="https://github.com/"><i class="fa fa-github"></i></a></li>
+                            <li><a href="tel:+902222222222"><i class="fa fa-phone"></i>  011111 469869</a></li>
+                        </ul>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+  </div>
+
+<div class="container">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
   <ol class="carousel-indicators">
