more mobile friendly on home page

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
 
@@ -104,8 +104,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
 
@@ -136,8 +136,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
 
@@ -167,8 +167,8 @@
               </div>
             </div>
           </div>
-        <h1 class="carousel-title">Living In London</h1>
-        <p class="carousel-subtitle">The overall guide for moving to London</p>
+        <h1 class="carousel-title hidden-sm hidden-xs">Living In London</h1>
+        <p class="carousel-subtitle hidden-sm hidden-xs">The overall guide for moving to London</p>
       </div>
     </div>
   </div>
